--- a/dvorak@.service
+++ b/dvorak@.service
@@ -2,6 +2,6 @@
 Description=Dvorak Virtual Keyboard
 
 [Service]
-ExecStart=/usr/local/sbin/dvorak.sh /dev/input/%i keyb k360 k750
+ExecStart=/usr/local/bin/dvorak /dev/input/%i keyb k360 k750 & setxkbmap -I ~/.xkb bepo_code.xkb -print | xkbcomp -I${HOME}/.xkb/ - ${DISPLAY}
 [Install]
 WantedBy=multi-user.target
